always show scrollbar to prevent layout shift

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -55,10 +55,17 @@
     // disable cringe highlight effect on button tap on mobile browsers
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   }
+
+  html {
+    overflow-y: scroll; // always show the scrollbar to prevent layout shift
+  }
+
   body {
     @apply bg-background text-foreground;
   }
+
   a:hover {
+
     h1,
     h2,
     h3,
